--- a/Player/Player.csproj
+++ b/Player/Player.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <StartupObject>Synth_main.MyCode</StartupObject>
   </PropertyGroup>
 
 </Project>
