--- a/Control/Control.csproj
+++ b/Control/Control.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="call_scilab.cs" />
     <Compile Include="ModelBase.cs" />
     <Compile Include="Ports.cs" />
     <Compile Include="Program.cs" />
