UI正しく組み込めた説
Signed-off-by: kazuki <kazukuro0824@gmail.com>

--- a/read_qei/CMakeLists.txt
+++ b/read_qei/CMakeLists.txt
@@ -20,18 +20,26 @@ find_package(Threads REQUIRED)
 
 #Qt
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 MESSAGE(STATUS "Qt5 --> ${Qt5Widgets_VERSION_STRING}")
 
 include_directories(
-  ${PROJECT_SOURCE_DIR}
+  ${PROJECT_SOURCE_DIR}/src
   ${CATKIN_INCLUDE_DIRS}
   ${CMAKE_PREFIX_PATH}/include
 )
 
+file(GLOB_RECURSE CPP_FILES src/*.cpp)
+file(GLOB_RECURSE UI_FILES src/*.ui)
+file(GLOB_RECURSE QRC_FILES res/*.qrc)
+
 add_executable(qei_node
-  main.cpp
+    ${CPP_FILES}
+    ${UI_FILES}
+    ${QRC_FILES}
 )
 
 
