scilabのdeinit(初期化の反対)・scilabスクリプトの存在確認・行列の読み取りのテンプレを実装 scilabスクリプトの場所を変更 インストール時にスクリプトをコピーするようにCMakeLists.txtの記述を変更
Signed-off-by: Maleic Acid <kazukuro0824@gmail.com>

--- a/control_server/CMakeLists.txt
+++ b/control_server/CMakeLists.txt
@@ -58,12 +58,14 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 add_executable(${PROJECT_NAME}_node src/control_server_node.cpp src/sci_bridge.c)
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS}) #necessary for message generation
 
+
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
    ${catkin_LIBRARIES}
    /usr/lib/scilab/libscicall_scilab.so
    /usr/lib/scilab/libscilab-cli.so
 )
+
 
 #############
 ## Install ##
@@ -74,10 +76,10 @@ target_link_libraries(${PROJECT_NAME}_node
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(PROGRAMS
+  synth_core.sce
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
