--- a/control_server/CMakeLists.txt
+++ b/control_server/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8.3)
 project(control_server)
 
 set(CMAKE_VERBOSE_MAKEFILE FALSE)
-add_compile_options(-std=c++11)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
