--- a/base_control/CMakeLists.txt
+++ b/base_control/CMakeLists.txt
@@ -10,6 +10,7 @@ project(base_control)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
+  geometry_msgs
   control_server
 )
 
@@ -70,6 +71,7 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
 )
 
 ################################################
