--- a/base_control/CMakeLists.txt
+++ b/base_control/CMakeLists.txt
@@ -71,6 +71,7 @@ add_message_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
+  roscpp
   geometry_msgs
 )
 
