スレッドの待機の実装 車輪の変換行列のパラメータ

--- a/base_control/CMakeLists.txt
+++ b/base_control/CMakeLists.txt
@@ -157,6 +157,7 @@ target_link_libraries(${PROJECT_NAME}_node
 )
 
 if(OpenMP_CXX_FOUND)
+  MESSAGE("${PROJECT_NAME} --> WITH_OPENMP")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
