--- a/base_control/CMakeLists.txt
+++ b/base_control/CMakeLists.txt
@@ -127,13 +127,13 @@ include_directories(
 
 ## OpenMP
 add_compile_options(-fopenmp)
-if(CMAKE_C_COMPILER_ID STREQUAL "Clang" AND CMAKE_${LANG}_COMPILER_VERSION VERSION_GREATER_EQUAL "7.0")
+if(CMAKE_C_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "5.0")
   include_directories(/usr/lib/llvm-7/include/openmp)
-elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU" AND CMAKE_${LANG}_COMPILER_VERSION VERSION_GREATER_EQUAL "7.0")
+elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "7.0")
   include_directories(/usr/lib/gcc/x86_64-linux-gnu/7/include)
-elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU" AND CMAKE_${LANG}_COMPILER_VERSION VERSION_GREATER_EQUAL "6.0")
+elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "6.0")
   include_directories(/usr/lib/gcc/x86_64-linux-gnu/6/include)
-elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU" AND CMAKE_${LANG}_COMPILER_VERSION VERSION_GREATER_EQUAL "5.0")
+elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "5.0")
   include_directories(/usr/lib/gcc/x86_64-linux-gnu/5/include)
 endif()
 
